@@ -1,3 +1,4 @@
+* [Bug 1153] refclock_nmea should not mix UTC with GPS time
 (4.2.5p163) 2009/04/10 Released by Harlan Stenn <stenn@ntp.org>
 (4.2.5p162) 2009/04/09 Released by Harlan Stenn <stenn@ntp.org>
 * Documentation updates from Dave Mills.
